[fix]記述の変更、z-indexの指定変更など

--- a/app/assets/stylesheets/pc/module/_favorites.scss
+++ b/app/assets/stylesheets/pc/module/_favorites.scss
@@ -49,7 +49,7 @@
   clear: both;
 }
 
-.timeline > li > .timeline-panel {
+.timeline > li > .timeline__panel {
   width: 46%;
   float: left;
   border: 1px solid #d4d4d4;
@@ -61,7 +61,7 @@
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
 }
 
-.timeline > li > .timeline-panel:before {
+.timeline > li > .timeline__panel:before {
   position: absolute;
   top: 26px;
   right: -15px;
@@ -73,7 +73,7 @@
   content: " ";
 }
 
-.timeline > li > .timeline-panel:after {
+.timeline > li > .timeline__panel:after {
   position: absolute;
   top: 27px;
   right: -14px;
@@ -97,25 +97,22 @@
   left: 50%;
   margin-left: -25px;
   background-color: #999999;
-  z-index: 100;
+  z-index: 1;
   border-top-right-radius: 50%;
   border-top-left-radius: 50%;
   border-bottom-right-radius: 50%;
   border-bottom-left-radius: 50%;
 }
 
-.timeline > li.timeline-inverted > .timeline-panel {
-  float: right;
-}
 
-.timeline > li.timeline-inverted > .timeline-panel:before {
+.timeline > li.timeline-inverted > .timeline__panel:before {
   border-left-width: 0;
   border-right-width: 15px;
   left: -15px;
   right: auto;
 }
 
-.timeline > li.timeline-inverted > .timeline-panel:after {
+.timeline > li.timeline-inverted > .timeline__panel:after {
   border-left-width: 0;
   border-right-width: 14px;
   left: -14px;
@@ -124,10 +121,6 @@
 
 .timeline-badge.primary {
   background-color: #2e6da4 !important;
-}
-
-.timeline-badge.success {
-  background-color: #3f903f !important;
 }
 
 .timeline-badge.warning {
@@ -142,7 +135,7 @@
   background-color: #5bc0de !important;
 }
 
-.timeline-title {
+.timeline__title {
   margin-top: 0;
   color: inherit;
 }
@@ -150,8 +143,4 @@
 .timeline-body > p,
 .timeline-body > ul {
   margin-bottom: 0;
-}
-
-.timeline-body > p + p {
-  margin-top: 5px;
 }
